# computer-graphics-ray-casting

./: .gitmodules  CMakeLists.txt  README.html  README.md  README.tex.md  main.cpp
include/: read_json.h
src/: Plane.cpp  Sphere.cpp  Triangle.cpp  TriangleSoup.cpp  first_hit.cpp  viewing_ray.cpp  write_ppm.cpp
